src/components/HabiticaAvatar/HabiticaAvatar.module.scss
.avatar {
  image-rendering: pixelated;
  position: relative;
  cursor: pointer;
  margin-bottom: -0.5rem !important;
  box-sizing: border-box;

  &.centered-avatar {
    margin: 0 auto;
  }
}

.character-sprites {
  width: 90px;
  height: 90px;
  display: inline-flex;
}

.current-pet {
  bottom: 0px;
  left: 0px;
}

.offset-kangaroo {
  margin-top: 24px;
}

.invert {
  filter: invert(100%);
}

.debug {
  border: 1px solid red;

  .character-sprites {
    border: 1px solid blue;
  }

  .weapon {
    border: 1px solid green;
  }

  span {
    border: 1px solid yellow;
  }
}

:global([class*="skin_"]),
:global([class*="hair_"]),
:global([class*="shirt_"]),
:global([class*="Mount_"]),
:global([class*="Pet-"]) {
  background-size: contain;
  background-repeat: no-repeat;
}

:global([class*="Mount_Head_"]),
:global([class*="Mount_Body_"]) {
  margin-top: 18px;
}

:global([class*="background_"]) {
  background-size: cover;
  background-repeat: no-repeat;
}

